# atalakit-infrastructure

./: .config.root.yml  .gitignore  .pre-commit-config.yaml  .providers.tftpl  .tflint.hcl  README.md  pyproject.toml
.github/workflows/: deploy_to_production.yml  deploy_to_uat.yml
components/: terragrunt.hcl
components/root/: root.hcl
components/root/organization/: terragrunt.hcl
modules/organization/: main.tf
tools/iac_builder/: iac.py  test.py
tools/iac_builder/test_config/: invalid.yaml  invalid_component.yaml  valid_env_vars.yaml
